apps/it-tools/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: it-tools
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tools.${DOMAIN}`)
      kind: Rule
      middlewares:
        - name: authelia-auth
          namespace: traefik
      services:
        - name: it-tools
          port: 80
          namespace: it-tools
  tls: {}
